--- a/application/views/employer/internship.html
+++ b/application/views/employer/internship.html
@@ -1,13 +1,22 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header text-center">Edit</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            
-            <div class="panel panel-default text-center">
+            <h2 class="page-header">Edit</h2>
+            <form class="form-inline text-center" role="form" method="post" action="/employer/internship">
+                <div class="form-group">
+                    <div class="input-group">
+                        <label class="sr-only">Opportunity</label>
+                        <select name="id" class="form-control" value="{echo $internship->id}">
+                            {foreach $opportunity in $opportunities}
+                            <option value="{echo $opportunity->id}">{echo $opportunity->title}</option>
+                            {/foreach}
+                        </select>
+                    </div>
+                </div>
+                <input type="hidden" name="action" value="edit">
+                <button type="submit" class="btn btn-primary">Edit</button>
+            </form>
+            <form class="panel panel-default text-center" method="post" action="/employer/internship">
                 <table class="table">
                     <tbody>
                         <tr>
@@ -34,9 +43,14 @@
                             <td><b>Compensation</b></td>
                             <td><input type="text" class="form-control" name="payment" value="{echo $internship->payment}"></td>
                         </tr>
+                        <tr>
+                            <td><input type="hidden" name="action" value="update"></td>
+                            <td><button type="submit" class="btn btn-primary pull-right"><i class="fa fa-check-circle"></i> Update</button></td>
+                        </tr>
                     </tbody>
+
                 </table>
-            </div>
+            </form>
         </div>
     </div>
 </div>
