Login/Reg Improved

--- a/application/views/employer/register.html
+++ b/application/views/employer/register.html
@@ -4,7 +4,7 @@
         {if(isset($message))}
             <div class="alert alert-danger" role="alert">{echo $message}</div>
         {/if}
-        <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Register with Linkedin</a></p>
+        <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Continue with Linkedin</a></p>
         <div class="col-md-8 col-md-offset-2 panel panel-default panel-body">
             <div class="media">
                 <div class="media-left">
