--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -33,15 +33,8 @@
                     </li>
                     {/if}
                     {else}
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle whitetext" data-toggle="dropdown"><i class="fa fa-check-square fa-lg"></i> Sign Up <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/student/register"><i class="fa fa-user fa-lg"></i> Student</a></li>
-                            <li class="divider"></li>
-                            <li><a href="/employer/register" class="whitetext"><i class="fa fa-briefcase fa-lg"></i> Employer</a></li>
-                        </ul>
-                    </li>
-                    <li><a onclick="login();" class="whitetext"><i class="fa fa-linkedin-square fa-lg"></i> Sign In</a></li>
+                    <li><a href="/students/register" class="whitetext"><i class="fa fa-user-plus fa-lg"></i> Students</a></li>
+                    <li><a href="/employer/register" class="whitetext"><i class="fa fa-briefcase fa-lg"></i> Employer</a></li>
                     {/else}
 
                 </ul>
