--- a/application/views/employer/internship.html
+++ b/application/views/employer/internship.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h2 class="page-header">Edit</h2>
-            <form class="form-inline text-center" role="form" method="post" action="/employer/internship">
+            <form class="form-inline text-center" role="form" method="post" action="/employer/internship/{echo $id}">
                 <div class="form-group">
                     <div class="input-group">
                         <label class="sr-only">Opportunity</label>
