--- a/application/views/employer/postinternship.html
+++ b/application/views/employer/postinternship.html
@@ -108,7 +108,7 @@
                             <option value="High School">High School</option>
                         </select>
                     </div>
-                    
+
                     <hr>
                     <div class="form-group">
                         <label>Skills *</label>
@@ -117,29 +117,40 @@
                     </div>
                     <div class="form-group">
                         <label>Details *</label>
-                        <textarea class="form-control" name="details" rows="5"></textarea>
+                        <textarea class="form-control editor" name="details" rows="5"></textarea>
                         <span class="help-block">{echo Shared\Markup::errors($errors, "details")}</span>
                     </div>
-                    
+
                     <hr>
                     <div class="form-group">
                         <label>Internship Location *</label>
                         <input type="text" class="form-control" name="location" required="">
                         <span class="help-block">{echo Shared\Markup::errors($errors, "location")}</span>
                     </div>
-                    
+
                     <div class="form-group">
                         <label>Compensation (Payment)</label>
                         <input type="text" class="form-control" name="payment">
                         <span class="help-block">{echo Shared\Markup::errors($errors, "payment")}</span>
                     </div>
-                    
+
+                    <div class="form-group">
+                        <label>Last Date </label>
+                        <input type="date" class="form-control" name="last_date" placeholder="YYYY-MM-DD">
+                        <span class="help-block">{echo Shared\Markup::errors($errors, "last_date")}</span>
+                    </div>
+
                     <div class="form-group">
                         <label>Duration </label>
                         <input type="text" class="form-control" name="duration" placeholder="2 months">
                         <span class="help-block">{echo Shared\Markup::errors($errors, "duration")}</span>
                     </div>
                     <input type="hidden" name="action" value="internship">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="linkedin" value="1" checked=""> Post on Linkedin as Internship
+                        </label>
+                    </div>
                     <button type="submit" class="btn btn-primary pull-right"><i class="fa fa-check-circle"></i> Submit for Approval</button>
                 </div>
 
