--- a/application/views/employer/followers.html
+++ b/application/views/employer/followers.html
@@ -6,12 +6,19 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <form class="form-inline text-center" role="form" id="profile_analytics_form">
+            <form class="form-inline text-center" role="form" id="followers">
                 <div class="form-group">
                     <div class="input-group">
-                        <label class="sr-only">Duration</label>
-                        <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i></span>
-                        <input type="text" style="width: 200px" name="range" id="range" class="form-control" value="{echo $range}" />
+                        <label class="sr-only">From</label>
+                        <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> From</span>
+                        <input type="date" style="width: 200px" name="startdate" class="form-control" value="{echo $week}" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <label class="sr-only">To</label>
+                        <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> To</span>
+                        <input type="date" style="width: 200px" name="enddate" class="form-control" value="{echo $now}" />
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">View Analytics</button>
@@ -21,8 +28,8 @@
                 <div class="panel-heading">
                     <i class="fa fa-bullhorn fa-fw"></i> Reach
                 </div>
-                <div class="panel-body">
-                    <div id="profile_reach">Select an opportunity and date range and then click on view analytics button to show details.</div>
+                <div class="panel-body text-center">
+                    <img id="output" src="/employer/followerstats/{echo $week}/{echo $now}">
                 </div>
             </div>
         </div>
