--- a/application/views/organizations/organization.html
+++ b/application/views/organizations/organization.html
@@ -7,94 +7,82 @@
                 <li class="active">{echo $organization->name}</li>
             </ol></nav>
 
-        <ul class="nav nav-tabs nav-justified" role="tablist" id="myTab">
-            <li class="active"><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
-            <li><a href="#opportunity" role="tab" data-toggle="tab">Opportunity</a></li>
-            <li><a href="#experience" role="tab" data-toggle="tab">Experience</a></li>
-        </ul>
-
-        <div class="tab-content">
-            <div class="tab-pane active" id="profile">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="media">
-                            <span class="pull-left hidden-xs">
-                                <img src="" class="media-object medium_image" align="right" alt="{echo $organization->name}">
-                            </span>
-                            <div class="media-body">
-                                <h1 class="media-heading">{echo $organization->name}</h1>
-                                <span id="orgdetails">
-                                    <p><i class="fa fa-globe fa-fw"></i> {echo $organization->website}</p>
-                                    <p><i class="fa fa-facebook fa-fw"></i> {echo $organization->fbpage}</p>
-                                </span>
-                            </div>
-                        </div>
-                        <hr>
-                        <span class="pull-right">
-                            <button name="message" value="" class="btn btn-warning" role="button"><i class="fa fa-envelope"></i> Send Message</button> 
-                            <button name="follow" value="organization" id="{echo $organization->id}" class="btn btn-info">Follow</button>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="media">
+                    <span class="pull-left hidden-xs">
+                        <img src="/thumbnails/{echo $organization->photo_id}" class="media-object medium_image" align="right" alt="{echo $organization->name}">
+                    </span>
+                    <div class="media-body">
+                        <h1 class="media-heading">{echo $organization->name}</h1>
+                        <span id="orgdetails">
+                            <p><i class="fa fa-globe fa-fw"></i> {echo $organization->website}</p>
                         </span>
                     </div>
                 </div>
+                <hr>
+                <span class="pull-right">
+                    <a href="https://www.linkedin.com/company/{echo $organization->linkedin_id}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Linkedin</a>
+                    <button name="follow" value="organization" id="{echo $organization->id}" class="btn btn-info">Follow</button>
+                </span>
+            </div>
 
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">About</h3>
-                    </div>
-                    <div class="panel-body">
-                        <p>{echo $organization->about}</p>
-                    </div>
+
+            <ul class="nav nav-tabs nav-justified" role="tablist" id="myTab">
+                <li class="active"><a href="#opportunity" role="tab" data-toggle="tab">Opportunity</a></li>
+                <li><a href="#experience" role="tab" data-toggle="tab">Experience</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div class="tab-pane active" id="opportunity">
+                    <table class="table table-striped">
+                        <tbody id="opportunity">
+                            {foreach $opportunity in $opportunities}
+                            <tr>
+                                <td>
+                                    <div class="media">
+                                        <a class="pull-left" href="{echo urlencode($opportunity->title)}/{echo $opportunity->id}">
+                                            <img src="/thumbnails/{echo $organization->photo_id}" class="media-object small_image" alt="{echo $opportunity->title}">
+                                        </a>
+                                        <div class="media-body">
+                                            <h4 class="media-heading"><a href="{echo urlencode($opportunity->title)}/{echo $opportunity->id}">{echo $opportunity->title}</a></h4>
+                                            {echo $opportunity->eligibility}
+                                        </div>
+                                    </div>
+                                </td>
+                                <td class="job-location">
+                                    <p><i class="fa fa-calendar fa-fw"></i>{echo $opportunity->last_date}</p>
+                                    <p><i class="fa fa-map-marker"></i>{echo $opportunity->location}</p>
+                                </td>
+                            </tr>
+                            {/foreach}
+                        </tbody>
+                    </table>
                 </div>
 
-            </div>
-
-            <div class="tab-pane" id="opportunity">
-                <p class="page-header">Opportunity by {echo $organization->name}<small>(test, competition, internship)</small> <a href="login" class="btn btn-success pull-right">Post Internship</a></p>
-                <table class="table table-striped">
-                    <tbody id="opportunity">
-                        {foreach $opportunity in $opportunities}
-                        <tr>
-                            <td>
-                                <div class="media">
-                                    <a class="pull-left" href="{echo urlencode($opportunity->title)}/{echo $opportunity->id}">
-                                        <img src="" class="media-object small_image" alt="{echo $opportunity->title}">
-                                    </a>
-                                    <div class="media-body">
-                                        <h4 class="media-heading"><a href="{echo urlencode($opportunity->title)}/{echo $opportunity->id}">{echo $opportunity->title}</a></h4>
-                                        {echo $opportunity->eligibility}
+                <div class="tab-pane" id="experience">
+                    <p class="page-header text-center">Shared Experiences of {echo $organization->name}<small>(interview, internship)</small></p>
+                    <table class="table table-striped">
+                        <tbody id="opportunity">
+                            {foreach $experience in $experiences}
+                            <tr>
+                                <td>
+                                    <div class="media">
+                                        <div class="media-body">
+                                            <h4 class="media-heading"><a href="experience/{echo urlencode($experience->title)}/{echo $experience->id}">{echo $experience->title}</a></h4>
+                                            {echo substr(strip_tags($experience->details), 0, 350)}......<a href="experience/{echo urlencode($experience->title)}/{echo $experience->id}">Read More</a>
+                                        </div>
                                     </div>
-                                </div>
-                            </td>
-                            <td class="job-location">
-                                <p><i class="fa fa-calendar fa-fw"></i>{echo $opportunity->last_date}</p>
-                                <p><i class="fa fa-map-marker"></i>{echo $opportunity->location}</p>
-                            </td>
-                        </tr>
-                        {/foreach}
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="tab-pane" id="experience">
-                <p class="page-header">Shared Experiences of {echo $organization->name}<small>(interview, internship)</small> <button class="btn btn-success pull-right" data-toggle="modal" data-target="#share_experience">Share Experience</button></p>
-                <table class="table table-striped">
-                    <tbody id="opportunity">
-                        {foreach $experience in $experiences}
-                        <tr>
-                            <td>
-                                <div class="media">
-                                    <div class="media-body">
-                                        <h4 class="media-heading"><a href="experience/{echo urlencode($experience->title)}/{echo $experience->id}">{echo $experience->title}</a></h4>
-                                        {echo substr(strip_tags($experience->details), 0, 350)}......<a href="experience/{echo urlencode($experience->title)}/{echo $experience->id}">Read More</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        {/foreach}
-                    </tbody>
-                </table>
+                                </td>
+                            </tr>
+                            {/foreach}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
+
+
 
 
     </div>
