--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="row">
             <h1 class="text-center">Get the perfect internship and training this summer</h1>
-            <div class="col-xs-12 col-md-9">
+            <div class="col-md-9">
                 <table class="table table-striped">
                     <tbody id="results">
                         {foreach $opportunity in $opportunities}
