--- a/application/views/home/contact.html
+++ b/application/views/home/contact.html
@@ -1,21 +1,15 @@
-<header class="intro-header" style="background-image: url('assets/img/others/contactus.png');">
+<header class="sb-page-header">
     <div class="container">
-        <div class="row text-center">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <div class="site-heading">
-                    <h1 class="huge">Contact Us</h1>
-                </div>
-            </div>
-        </div>
-    </div>
+        <h1>Contact</h1>
+        <p>Contact Swiftintern if you have suggestions for new features, have feedback for us, or if you need help.</p>
+</div>
+
+  
 </header>
 <div class="container">
     <div class="row">
         <div class="content-inner-detail">
-            <ol class="breadcrumb">
-                <li><a href="home">Home</a></li>
-                <li class="active">Contact Us</li>
-            </ol>
+
             <div class="col-lg-4">
                 <div class="thumbnail text-center">
                     <i class="fa fa-whatsapp fa-5x"></i>
@@ -99,6 +93,6 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
-        $('.navbar').css('margin-bottom', '-20px');
+        $(".navbar").css("margin-bottom", "0px");
     });
 </script>
