Improved Email Delivery System

--- a/application/views/users/emails/studentRegister.html
+++ b/application/views/users/emails/studentRegister.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Student Register</title>
-</head>
-<body>
-	<img src="../images/headerlogo.png" style='width:100%;'><br>
-	<br>
-	You've made a great decision! We don't need to tell you how critical an internship is to your future success - you already know.<br>
-	Here are two easy ways for you to get started:<br>
-	<ol type="1">
-		<li><a href="http://swiftintern.com/resume">Create a Resume</a>. Upload your existing resume or use our easy resume builder to create a new one.</li>
-		<li><a href="http://swiftintern.com/onlinetest">Add Certification</a>. Appear for an online test and if you pass it certification will be provided to your profile on linkedin and swiftintern</li>
-	</ol>
-	<br>
-	After that, you're ready to <a href="http://swiftintern.com/resume">start searching for the perfect gig</a>. You can search any combination of keyword or major, location, paid or unpaid, full or part-time and even virtual.<br>
-	<br>
-	<br>
-	Thanks, and good luck!<br>
-	SwiftIntern.com Team<br>
-	+91-9891048495<br>
-	<br>
-	We're on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
-</body>
-</html>
+<img src="http://assets.swiftintern.com/images/headerlogo.png" style='width:100%;'><br>
+<br>
+{$user->name}, you have made a great decision! We dont need to tell you how critical an internship is to your future success - you already know.<br>
+Here are two easy ways for you to get started:<br>
+<ol type="1">
+        <li><a href="http://swiftintern.com/resume">Create a Resume</a>. Upload your existing resume or use our easy resume builder to create a new one.</li>
+        <li><a href="http://swiftintern.com/onlinetest">Add Certification</a>. Appear for an online test and if you pass it certification will be provided to your profile on linkedin and swiftintern</li>
+</ol>
+<br>
+After that, you are ready to <a href="http://swiftintern.com/">start searching for the perfect gig</a>. You can search any combination of keyword or major, location, paid or unpaid, full or part-time and even virtual.<br>
+<br>
+<br>
+Thanks, and good luck!<br>
+SwiftIntern.com Team<br>
++91-9891048495<br>
+<br>
+We are on <a href="https://www.facebook.com/swiftintern">Facebook</a> and <a href="https://twitter.com/swiftintern">Twitter</a> giving you the latest tips, news & internships.
