--- a/application/views/home/contact.html
+++ b/application/views/home/contact.html
@@ -6,6 +6,7 @@
 </header>
 <div class="container">
     <div class="row">
+        <form class="col-md-8">
             <div class="form-group">
                 <label for="exampleInputEmail1">Full Name</label>
                 <input type="email" class="form-control" placeholder="Enter email">
@@ -29,6 +30,7 @@
                 <li class="tooltip-social twitter-link"><a href="https://twitter.com/swiftintern" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter-square fa-3x"></i></a></li>
                 <li class="tooltip-social google-plus-link"><a href="https://plus.google.com/+Swiftinternindia" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
                 <li class="tooltip-social rss-link"><a href="mailto:info@swiftintern.com" data-toggle="tooltip" data-placement="top" title="RSS"><i class="fa fa-envelope fa-3x"></i></a></li>
+                <li class="tooltip-social whatsapp-link"><a href="whatsapp://send" data-toggle="tooltip" data-placement="top" title="Whatsapp"><i class="fa fa-whatsapp fa-3x"></i></a></li>
             </ul>
                            
                     <p><i class="fa fa-envelope fa-lg"></i> info@swiftintern.com</p>
