--- a/application/views/home/about.html
+++ b/application/views/home/about.html
@@ -1,20 +1,13 @@
-<header class="intro-header" style="background-image: url('assets/img/others/bg.jpg');">
+<header class="sb-page-header">
     <div class="container">
-        <div class="row text-center">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <div class="site-heading">
-                    <h1 class="huge">About Us</h1>
-                    <hr class="small">
-                    <span class="subheading">"No college student should graduate without any professional experience!"</span>
-                </div>
-            </div>
-        </div>
+        <h1>About Us</h1>
+        <p>No college Students should graduate without any professional experience</p>
     </div>
 </header>
 <section class="container">
     <article class="row">
         <div class="blog col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <p>SwiftIntern is the india's largest student-focused internship portal, bringing students, employers and higher education institutions together in one centralized location. Swiftintern.com provides a wide variety of interactive tools and services to enable every student, employer and educator to better understand and optimize internship opportunities, enabling businesses to identify the best job candidates and for students to develop the real-world skills they will need upon graduation.</p>
+            <p>SwiftIntern is the india largest student-focused internship portal, bringing students, employers and higher education institutions together in one centralized location. Swiftintern.com provides a wide variety of interactive tools and services to enable every student, employer and educator to better understand and optimize internship opportunities, enabling businesses to identify the best job candidates and for students to develop the real-world skills they will need upon graduation.</p>
             <p>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/YvX96bbRIV8" frameborder="0" allowfullscreen></iframe>
@@ -31,6 +24,6 @@
 </section>
 <script type="text/javascript">
     $(document).ready(function () {
-        $('.navbar').css('margin-bottom', '-20px');
+        $(".navbar").css("margin-bottom", "0px");
     });
 </script>
